--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ BD_NAME=shop
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/shop?schema=public"
+
+#openssl rand -base64 32
+AUTH_SECRET="+VMQwnueqZBhpTRrzkb4mezf3w/e7kq/5OFuGgHriJ4="
