--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "@prisma/client": "^5.11.0",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
     "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
     "swiper": "^11.0.7",
+    "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
