--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.11.0",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.2.0",
     "clsx": "^2.1.0",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.15",
