--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testlo-shop",
+  "name": "venti-shop",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@paypal/react-paypal-js": "^8.2.0",
-    "@prisma/client": "^5.11.0",
+    "@prisma/client": "^5.18.0",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.2.0",
@@ -35,7 +35,7 @@
     "eslint-config-next": "14.1.0",
     "node-ts": "^6.0.1",
     "postcss": "^8",
-    "prisma": "^5.11.0",
+    "prisma": "^5.18.0",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
